refactor: cleaned up redundant classes and refactored some methods with streams